# serverlessChat

./: .gitignore  Cargo.toml
data/: bootstrap_nodes.json
p2p-client/: Cargo.toml
p2p-client/data/: server.db
p2p-client/src/: config.rs  main.rs
p2p-client/src/common/: commands.rs  events.rs  mod.rs  types.rs
p2p-client/src/network/: behavior.rs  client.rs  mod.rs  nat_traversal.rs  transport.rs
p2p-client/src/storage/: client_db.rs  mod.rs  server_db.rs
p2p-client/src/ui/: app.rs  mod.rs  state.rs
p2p-client/src/ui/components/: debug_panel.rs  sidebar.rs
p2p-nodemaster/: Cargo.toml
p2p-nodemaster/src/: main.rs
p2p-nodemaster/src/network/: behavior.rs  mod.rs  node.rs  transport.rs
src/: config.rs  main.rs
src/common/: commands.rs  events.rs  mod.rs  types.rs
src/network/: behavior.rs  client.rs
src/storage/: database.rs  mod.rs  models.rs
src/ui/: app.rs  state.rs
src/ui/components/: chat_area.rs  input_bar.rs  mod.rs  sidebar.rs
