[package]
name = "rust_p2p_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Giao diện (GUI) ---
eframe = "0.33.2"  # Wrapper bao quanh egui để chạy trên Desktop
egui = "0.33.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# --- Xử lý bất đồng bộ ---
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"

# --- Mạng P2P (libp2p) ---
# Chúng ta dùng các feature cơ bản:
# - gossipsub: Giao thức lan truyền tin nhắn (Chat room)
# - kad: Kademlia DHT để tìm peer qua Internet
# - identify: Trao đổi thông tin kết nối (addr, agent)
# - noise: Mã hóa kết nối
# - yamux: Đa luồng trên 1 kết nối
# - tcp-tokio: Chạy trên nền tokio
libp2p = { version = "0.56.0", features = [
    "gossipsub", 
    "kad",
    "identify",
    "noise", 
    "yamux", 
    "tcp", 
    "dns", 
    "macros",
    "tokio"
] }

# --- Tiện ích ---
serde = { version = "1.0.228", features = ["derive"] } # Để biến struct thành JSON gửi đi
serde_json = "1.0.145"
chrono = "0.4.42" # Xử lý thời gian
hex = "0.4.3"
log = "0.4.28"
env_logger = "0.11.8"
dotenvy = "0.15"
clap = { version = "4.5.4", features = ["derive"] }