[workspace]
members = [
    "p2p-client",
    "p2p-nodemaster",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["nguyenthibe1979@gmail.com"]
license = "NO LICENSE"

[workspace.dependencies]
# Shared dependencies across workspace members
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
hex = "0.4.3"
dotenvy = "0.15"
libp2p = { version = "0.56.0", features = [
    "gossipsub",
    "kad",
    "identify",
    "noise",
    "yamux",
    "tcp",
    "dns",
    "macros",
    "tokio"
] }

