[package]
name = "p2p-nodemaster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Shared workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
dotenvy.workspace = true
libp2p.workspace = true


